kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glpi
  namespace: default
  labels:
    app: glpi
spec:
  selector:
    matchLabels:
      app: glpi
  replicas: 1 
  template: 
    metadata:
      labels:
        app: glpi
    spec:
      volumes:
          - name: glpi-claim
            persistentVolumeClaim:
              claimName: glpi-claim
      hostname: glpi
      containers:
      - name: glpi
        image: emersonarredondo/glpi:9.5.6
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - mountPath: /var/www/html/
          name: glpi-claim
          subPath: glpidata
