kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  creationTimestamp: null
  labels:
    app: glpi
  name: glpi
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: glpi
status:
  loadBalancer: {}
